--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -9,15 +9,18 @@
 
 <div>
 	<form th:action="@{/form}"  method="post" th:object="${producto}">
-		<input th:="${producto.id!= null}" type="hidden" th:field="*{id}" />
+<!--		<input th:="${producto.id!= null}" type="hidden" th:field="*{id}" />-->
+		<input type="hidden" th:field="*{id}" />
 		<div>
 			<a th:href="@{/listar}">volver</a>
 			<label for="nombre">Nombre</label>
 			<div><input type="text" th:field="*{nombre}"/></div>
+			<small th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" >Volver</small>
 		</div>
 		<div>
 			<label for="precio">Precio</label>
 			<div><input type="number" th:field="*{precio}"/></div>
+			<small th:if="${#fields.hasErrors('precio')}" th:errors="*{precio}" >Volver</small>
 		</div>
 		<div>
 			<label for="createAt">Fecha</label>
