--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -27,7 +27,8 @@
 			<td th:text="${producto.nombre}"></td>
 			<td th:text="${producto.precio}"></td>
 			<td th:text="${producto.createAt}"></td>
-			<td><a th:href="@{/form-v2/} + ${producto.id}">Editar</a></td>
+<!--			<td><a th:href="@{/form/} + ${producto.id}">Editar</a></td>-->
+			<td><a th:href="@{/form/{id}(id=${producto.id})}">Editar</a></td>
 		</tr>
 	</tbody>
 </table>
