--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -18,6 +18,7 @@
 			<th>nombre</th>
 			<th>precio</th>
 			<th>fecha</th>
+			<th>Categoría</th>
 			<th>Editar</th>
 			<th>Eliminar</th>
 		</tr>
@@ -28,6 +29,7 @@
 			<td th:text="${producto.nombre}"></td>
 			<td th:text="${producto.precio}"></td>
 			<td th:text="${producto.createAt}"></td>
+			<td th:text="${producto.categoria.nombre}"></td>
 <!--			<td><a th:href="@{/form/} + ${producto.id}">Editar</a></td>-->
 			<td><a th:href="@{/form/{id}(id=${producto.id})}">Editar</a></td>
 			<td><a th:href="@{/eliminar/{id}(id=${producto.id})}" onclick="return confirm('Estas seguro que deseas eliminar el producto?');">Eliminar</a></td>
