--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -8,7 +8,7 @@
 <h1 th:text="${titulo}"></h1>
 
 <div>
-    <form th:action="@{/form}" method="post" th:object="${producto}">
+    <form th:action="@{/form}" method="post" th:object="${producto}" enctype="multipart/form-data}">
         <!--		<input th:="${producto.id!= null}" type="hidden" th:field="*{id}" />-->
         <input type="hidden" th:field="*{id}"/>
         <div>
@@ -34,6 +34,12 @@
             </select>
             </div>
             <small th:if="${#fields.hasErrors('categoria.id')}" th:errors="*{categoria.id}"></small>
+        </div>
+        <div>
+            <label for="file">Foto</label>
+            <div>
+                <input type="file" name ="file"/>
+            </div>
         </div>
         <div><input type="submit" th:value="${boton}"/></div>
 </div>
